--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Ashraf Kamal - Academic Portfolio</title>
+    <title>Dr. Ashraf Kamal</title>
     <style>
         * {
             margin: 0;
@@ -830,9 +830,205 @@
 
 /* ...existing code... */
 /* ...existing code... */
+  /* Add this at the end of your  block for responsive/mobile support */
 
+/* Responsive Container */
+@media (max-width: 900px) {
+    .container {
+        max-width: 100%;
+        padding: 0 10px;
+    }
+    .main-content,
+    .section,
+    .contact-section {
+        padding: 1.2rem !important;
+    }
+    .metrics-section {
+        padding: 1rem !important;
+    }
+}
+
+/* Profile Section Responsive */
+@media (max-width: 900px) {
+    .profile-section {
+        flex-direction: column;
+        gap: 2rem;
+        padding: 2rem 1rem 1rem 1rem;
+        align-items: flex-start;
+        padding-top: 2.5rem;
+    }
+    .profile-image {
+        margin: 0 auto;
+    }
+    .profile-placeholder,
+    .profile-image img {
+        width: 140px !important;
+        height: 140px !important;
+        font-size: 48px !important;
+    }
+    .profile-info h1 {
+        font-size: 1.5rem;
+    }
+    .profile-info .title {
+        font-size: 1rem;
+    }
+    .contact-info {
+        font-size: 0.95rem;
+    }
+    .social-links {
+        gap: 0.5rem;
+    }
+    .social-links a {
+        width: 36px;
+        height: 36px;
+    }
+}
+
+/* Navigation Responsive */
+@media (max-width: 900px) {
+    nav {
+        flex-direction: column;
+        padding: 0.7rem 1rem;
+    }
+    .nav-links {
+        flex-wrap: wrap;
+        gap: 1rem;
+        font-size: 0.95rem;
+        justify-content: center;
+        margin: 0.5rem 0 0 0;
+    }
+    .nav-actions {
+        margin: 0 0 0.5rem 0;
+        gap: 0.5rem;
+    }
+}
+
+/* Tabs Responsive */
+@media (max-width: 900px) {
+    .about-tabs {
+        flex-wrap: wrap;
+        gap: 0.5rem;
+        font-size: 0.95rem;
+    }
+    .tab-button {
+        padding: 7px 12px;
+        font-size: 0.95rem;
+    }
+}
+
+/* Grid Responsive */
+@media (max-width: 900px) {
+    .metrics-grid,
+    .interests-grid,
+    .education-grid,
+    .blog-grid {
+        grid-template-columns: 1fr !important;
+        gap: 1rem !important;
+    }
+}
+
+/* Cards Responsive */
+@media (max-width: 900px) {
+    .metric-card,
+    .interest-card,
+    .education-card,
+    .patent-card,
+    .blog-card {
+        padding: 1rem !important;
+        font-size: 0.98rem;
+    }
+    .publication-list li {
+        padding: 1rem !important;
+        font-size: 0.98rem;
+    }
+}
+
+/* Patent/Publication Number Responsive */
+@media (max-width: 900px) {
+    .patent-number,
+    .publication-number {
+        left: 0 !important;
+        width: 24px !important;
+        height: 24px !important;
+        font-size: 12px !important;
+    }
+    .patent-card > div,
+    .publication-list li > div {
+        margin-left: 28px !important;
+    }
+}
+
+/* Timeline Responsive */
+@media (max-width: 900px) {
+    .experience-timeline {
+        padding-left: 20px !important;
+    }
+    .experience-timeline::before {
+        left: 5px !important;
+    }
+    .experience-item::before {
+        left: -10px !important;
+    }
+}
+
+/* Footer Responsive */
+@media (max-width: 900px) {
+    footer > div {
+        flex-direction: column !important;
+        gap: 0.5rem;
+        font-size: 0.95rem;
+    }
+    footer span {
+        text-align: center !important;
+        flex: unset !important;
+    }
+}
+
+/* Marquee Responsive */
+@media (max-width: 900px) {
+    #news marquee {
+        font-size: 0.95rem !important;
+        padding: 6px 0 !important;
+    }
+}
+
+/* Blog Section Responsive */
+@media (max-width: 900px) {
+    .blog-content {
+        padding: 1rem !important;
+    }
+    .blog-image {
+        height: 120px !important;
+        font-size: 2rem !important;
+    }
+}
+
+/* Contact Section Responsive */
+@media (max-width: 900px) {
+    .contact-section {
+        padding: 1.2rem !important;
+        font-size: 1rem;
+    }
+    .contact-form-btn {
+        padding: 10px 20px !important;
+        font-size: 1rem !important;
+    }
+}
+
+/* Back to Top Button Responsive */
+@media (max-width: 900px) {
+    .back-to-top {
+        width: 40px !important;
+        height: 40px !important;
+        font-size: 1.2rem !important;
+        bottom: 20px !important;
+        right: 20px !important;
+    }
+}
     
     </style>
+
+  
 </head>
 
 <body>
