--- a/index.html
+++ b/index.html
@@ -283,12 +283,14 @@
         /* Section Styles */
         .section {
             padding: 3rem;
+            padding-top: 1.2rem; /* Was 3rem, now less space above section title */
+            padding-bottom: 3rem;
             border-top: 1px solid var(--border-light);
         }
 
         .section h2 {
             color: var(--primary-color);
-            margin-bottom: 2rem;
+            margin-bottom: 0.7rem;
             font-size: 1.8rem;
             font-weight: 600;
             position: relative;
@@ -578,19 +580,14 @@
             position: relative;
         }
 
-        .patent-card:hover {
-            background: var(--light-accent);
-            transform: translateY(-5px);
-            box-shadow: 0 5px 20px rgba(0,0,0,0.15);
-        }
-
+        /* Make patent number display match conference/publication number style */
         .patent-number {
             position: absolute;
             left: -15px;
             top: 50%;
             transform: translateY(-50%);
-            background: var(--secondary-color);
-            color: var(--white);
+            background: var(--white);
+            color: var(--secondary-color);
             width: 30px;
             height: 30px;
             border-radius: 50%;
@@ -599,8 +596,18 @@
             justify-content: center;
             font-weight: bold;
             font-size: 14px;
+            border: 2px solid var(--secondary-color);
+            box-shadow: 0 2px 6px rgba(0,0,0,0.07);
+            z-index: 1;
+            transition: background 0.3s, color 0.3s;
+            text-decoration: none;
         }
 
+        .patent-number:hover {
+            background: var(--secondary-color);
+            color: var(--white);
+            text-decoration: none;
+        }
         /* Publications */
         .subsection {
             margin-top: 2.5rem;
@@ -830,7 +837,7 @@
 
 /* ...existing code... */
 /* ...existing code... */
-  /* Add this at the end of your  block for responsive/mobile support */
+/* Add this at the end of your <style> block for responsive/mobile support */
 
 /* Responsive Container */
 @media (max-width: 900px) {
@@ -1025,7 +1032,21 @@
         right: 20px !important;
     }
 }
-    
+   
+/* Reduce gap between section title and first subsection heading */
+.section h2 {
+    margin-bottom: 1.2rem; /* Was 2rem, now less space below section title */
+}
+
+/* Reduce gap between patent section title and Granted Patents */
+#patents .subsection {
+    margin-top: 0.3rem; /* Was larger, now less space above subsection */
+}
+
+/* Reduce gap between publication section title and Journal Articles */
+#publications .subsection {
+    margin-top: 0.3rem; /* Was larger, now less space above subsection */
+}
     </style>
 
   
@@ -1456,7 +1477,7 @@
                         </li>
                     </ul>
                 </div>
-
+               
                 <!-- Conference Publications -->
                 <div class="subsection">
                     <h3>Conference Papers</h3>
@@ -1677,21 +1698,25 @@
             button.textContent = excerpt.classList.contains('expanded') ? 'Read Less' : 'Read More';
         }
 
-        // Smooth scrolling
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+       // ...existing code...
+        // Smooth scrolling with offset for fixed header
+        document.querySelectorAll('.nav-links a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 if (this.getAttribute('href') === '#') return;
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
                 if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
+                    const headerOffset = document.querySelector('header').offsetHeight || 70;
+                    const elementPosition = target.getBoundingClientRect().top + window.pageYOffset;
+                    const offsetPosition = elementPosition - headerOffset + 2; // +2 for small gap
+                    window.scrollTo({
+                        top: offsetPosition,
+                        behavior: 'smooth'
                     });
                 }
             });
         });
-
+// ...existing code...
         // Back to Top
         const backToTopButton = document.getElementById('backToTop');
         window.addEventListener('scroll', () => {
