--- a/index.html
+++ b/index.html
@@ -1908,7 +1908,7 @@
             <div class="contact-section" id="contact">
                 <h2>Contact Me</h2> <br>
                 <p>Feel free to reach out for collaborations, research opportunities, or academic discussions</p> <br>
-                <a href="https://forms.google.com/your-form-link" target="_blank" class="contact-form-btn">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScbjKQfFmmYFGIsioI16JcYx1DOiMNMEwupDf2qpEvnnKEY9A/viewform?usp=dialog" target="_blank" class="contact-form-btn">
                     Open Contact Form
                 </a>
             </div>
